Nouvelles méthodes pour faires toutes les queries d'u coup puis marginaliser

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,11 +159,13 @@
     "    dot = 'digraph G {\\n'\n",
     "    regex = r\"\\d+:RULE \\d+ \\((.*?)\\):\\d+\\.\\d+\"\n",
     "    print(BAG)\n",
+    "    prop = BeliefPropagation(BAG)\n",
+    "    nodes_wo_evidences = [n for n in nodes.keys() if n not in evidences.keys()]\n",
+    "    total_prob = prop.query(nodes_wo_evidences, evidence=evidences)\n",
     "    def node_to_dot(node):\n",
     "        print(node)\n",
     "        if node not in evidences.keys():\n",
-    "            prop = BeliefPropagation(BAG)\n",
-    "            prob = prop.query([node], evidence=evidences).values[1]\n",
+    "            prob = total_prob.marginalize([n for n in nodes_wo_evidences if n != node], inplace=False).values[1]\n",
     "            print(node)\n",
     "        else:\n",
     "            prob = 1\n",
@@ -182,14 +184,8 @@
     "                return f'  {node} [label=\\\"{node} ({number})\\\\n{correspondance.group(1)}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
     "            else:\n",
     "                return f'  {node} [label=\"{node} ({number})\\\\n{LABEL}\\\\n{prob}\", color=\"{color}\", penwidth=3, shape=\"{shape}\"];\\n'\n",
-    "    with concurrent.futures.ThreadPoolExecutor(max_workers=len(nodes)) as executor:\n",
-    "        # Exécution des fonctions parallèles avec les paramètres\n",
-    "        resultats = list(executor.map(node_to_dot, nodes.keys()))\n",
-    "        for result in resultats:\n",
-    "            try:\n",
-    "                dot += result\n",
-    "            except:\n",
-    "                print(result)\n",
+    "    for node in nodes.keys():\n",
+    "        dot += node_to_dot(node)\n",
     "    for edge in BAG.edges():\n",
     "        # if edge[0] in nodes.keys() and edge[1] in nodes.keys():\n",
     "        dot += f'  \\\"{edge[0]}\\\" -> \\\"{edge[1]}\\\";\\n'\n",
@@ -200,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +265,7 @@
       "WARNING:pgmpy:Replacing existing CPD for 8\n",
       "WARNING:pgmpy:Replacing existing CPD for 10\n",
       "WARNING:pgmpy:Replacing existing CPD for 13\n",
-      "WARNING:pgmpy:Replacing existing CPD for 14\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "WARNING:pgmpy:Replacing existing CPD for 14\n",
       "WARNING:pgmpy:Replacing existing CPD for 16\n",
       "WARNING:pgmpy:Replacing existing CPD for 17\n",
       "WARNING:pgmpy:Replacing existing CPD for 19\n"
@@ -378,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -387,88 +377,86 @@
      "text": [
       "BayesianNetwork with 41 nodes and 63 edges\n",
       "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "1415\n",
-      "\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "4\n",
       "1\n",
-      "15\n",
-      "3\n",
-      "19\n",
-      "16\n",
-      "5\n",
-      "18\n",
-      "13\n",
-      "10\n",
-      "9\n",
-      "12\n",
-      "8\n",
       "2\n",
-      "17\n",
-      "7\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
       "6\n",
+      "6\n",
+      "7\n",
+      "7\n",
+      "8\n",
+      "8\n",
+      "9\n",
+      "9\n",
+      "10\n",
+      "10\n",
       "11\n",
+      "11\n",
+      "12\n",
+      "12\n",
+      "13\n",
+      "13\n",
       "14\n",
+      "14\n",
+      "15\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "17\n",
+      "18\n",
+      "18\n",
+      "19\n",
+      "19\n",
       "BayesianNetwork with 19 nodes and 22 edges\n",
       "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "3\n",
-      "4\n",
       "1\n",
-      "6\n",
-      "5\n",
       "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n",
       "7\n",
-      "9\n",
-      "11\n",
-      "10\n",
-      "12\n",
-      "18\n",
-      "15\n",
+      "7\n",
       "8\n",
-      "19\n",
-      "16\n",
+      "8\n",
+      "9\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "11\n",
+      "11\n",
+      "12\n",
+      "12\n",
       "13\n",
-      "17\n",
+      "13\n",
       "14\n",
+      "14\n",
+      "15\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "17\n",
+      "18\n",
+      "18\n",
+      "19\n",
+      "19\n",
       "/homes/nmh24/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
      ]
     }
    ],
    "source": [
-    "evidence = {}\n",
+    "evidence = {19 : 1}\n",
     "with open(output_file, 'w') as f:\n",
     "    f.write(to_dot(BAG, nodes, evidence))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
@@ -487,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -503,32 +491,22 @@
       "+-------+-------+-----+---------------------+\n",
       "| 15(1) | 0.0   | ... | 0.96                |\n",
       "+-------+-------+-----+---------------------+\n",
-      "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'key'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(BAG\u001b[38;5;241m.\u001b[39mget_cpds(\u001b[38;5;241m15\u001b[39m))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(nodes\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[0;32m----> 3\u001b[0m nnn \u001b[38;5;241m=\u001b[39m \u001b[43mnodes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkey\u001b[49m()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# tab = BeliefPropagation(BAG).query(nnn)\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'key'"
+      "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
    ],
    "source": [
     "print(BAG.get_cpds(15))\n",
     "print(nodes.keys())\n",
-    "nnn = nodes.keys()\n",
+    "nnn = list(nodes.keys())\n",
     "print(nnn)\n",
-    "# tab = BeliefPropagation(BAG).query(nnn)"
+    "tab = BeliefPropagation(BAG).query(nnn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +552,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m BayesianModel([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m), (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Ajoutez vos probabilités conditionnelles\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_cpds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mB\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mC\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Obtenez les probabilités marginales de A, B, C en une seule requête\u001b[39;00m\n\u001b[1;32m     16\u001b[0m inference \u001b[38;5;241m=\u001b[39m VariableElimination(model)\n",
+      "Cell \u001b[0;32mIn[118], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m BayesianModel([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m), (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Ajoutez vos probabilités conditionnelles\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_cpds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mB\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mC\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Obtenez les probabilités marginales de A, B, C en une seule requête\u001b[39;00m\n\u001b[1;32m     16\u001b[0m inference \u001b[38;5;241m=\u001b[39m VariableElimination(model)\n",
       "\u001b[0;31mTypeError\u001b[0m: BayesianNetwork.add_cpds() got an unexpected keyword argument 'A'"
      ]
     }
@@ -604,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
