Pret pour présentation

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
     "        get_all_ancestors(BAG, p, ancestors)\n",
     "    return ancestors\n",
     "\n",
-    "def to_dot(BAG, nodes, evidences):\n",
+    "def to_dot(BAG, nodes, evidences, display_kts=False):\n",
     "    dot = 'digraph G {\\n'\n",
     "    regex = r\"\\d+:RULE \\d+ \\((.*?)\\):\\d+\\.\\d+\"\n",
     "    print(BAG)\n",
@@ -163,10 +163,8 @@
     "    nodes_wo_evidences = [n for n in nodes.keys() if n not in evidences.keys()]\n",
     "    total_prob = prop.query(nodes_wo_evidences, evidence=evidences)\n",
     "    def node_to_dot(node):\n",
-    "        print(node)\n",
     "        if node not in evidences.keys():\n",
     "            prob = total_prob.marginalize([n for n in nodes_wo_evidences if n != node], inplace=False).values[1]\n",
-    "            print(node)\n",
     "        else:\n",
     "            prob = 1\n",
     "        probH = int(prob * 255)\n",
@@ -187,8 +185,8 @@
     "    for node in nodes.keys():\n",
     "        dot += node_to_dot(node)\n",
     "    for edge in BAG.edges():\n",
-    "        # if edge[0] in nodes.keys() and edge[1] in nodes.keys():\n",
-    "        dot += f'  \\\"{edge[0]}\\\" -> \\\"{edge[1]}\\\";\\n'\n",
+    "        if display_kts or edge[0] in nodes.keys():\n",
+    "            dot += f'  \\\"{edge[0]}\\\" -> \\\"{edge[1]}\\\";\\n'\n",
     "    dot += '}'\n",
     "    return dot\n",
     "\n"
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -206,15 +204,14 @@
       "1:admin(domain):0\n",
       "4:dcSync(domain):0\n",
       "4:dcSync(domain):0\n",
-      "4:dcSync(domain):0\n",
       "7:passTheTicket(domain):0\n",
-      "7:passTheTicket(domain):0\n",
-      "10:mitm(domain):0\n",
-      "16:validCredentials(domain):0\n",
-      "17:RULE 6 (valid credentials may be found):0.8\n",
-      "22:admin(host):0\n",
-      "22:admin(host):0\n",
-      "28:lowAccess(host):0\n"
+      "10:validCredentials(domain):0\n",
+      "11:RULE 6 (valid credentials may be found):0.8\n",
+      "15:coerceSMB(domain):0\n",
+      "18:admin(host):0\n",
+      "18:admin(host):0\n",
+      "21:coerceHTTP(host):0\n",
+      "26:lowAccess(host):0\n"
      ]
     }
    ],
@@ -252,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -262,9 +259,8 @@
       "WARNING:pgmpy:Replacing existing CPD for 2\n",
       "WARNING:pgmpy:Replacing existing CPD for 4\n",
       "WARNING:pgmpy:Replacing existing CPD for 6\n",
-      "WARNING:pgmpy:Replacing existing CPD for 8\n",
       "WARNING:pgmpy:Replacing existing CPD for 10\n",
-      "WARNING:pgmpy:Replacing existing CPD for 13\n",
+      "WARNING:pgmpy:Replacing existing CPD for 12\n",
       "WARNING:pgmpy:Replacing existing CPD for 14\n",
       "WARNING:pgmpy:Replacing existing CPD for 16\n",
       "WARNING:pgmpy:Replacing existing CPD for 17\n",
@@ -275,28 +271,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Permissions move'}\n",
-      "[3, 'impacket', 'Lskills', 'Permissions move']\n",
-      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Lateral move'}\n",
-      "[5, 'impacket', 'Lskills', 'Lateral move']\n",
-      "{'tool': 'certipy', 'skills': 'L', 'Type': 'ADCS'}\n",
-      "[7, 'certipy', 'Lskills', 'ADCS']\n",
-      "{'tool': 'impacket and PetitPotam.py', 'skills': 'H', 'Type': 'No credentials'}\n",
-      "[9, 'impacket8', 'Hskills', 'No credentials']\n",
-      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Known vulnerabilities'}\n",
-      "[11, 'impacket', 'Lskills', 'Known vulnerabilities']\n",
-      "{'tool': 'impacket', 'skills': 'H', 'Type': 'MITM'}\n",
-      "[7, 'impacket', 'Hskills', 'MITM']\n",
-      "{'tool': 'impacket and CVE-2020-1472-exploit.py', 'skills': 'L', 'Type': 'MITM'}\n",
-      "[7, 'impacket14', 'Lskills', 'MITM']\n",
-      "{'tool': 'impacket and privexchange.py', 'skills': 'H', 'Type': 'Known vulnerabilities'}\n",
-      "[11, 'impacket16', 'Hskills', 'Known vulnerabilities']\n",
-      "{'tool': 'Unknown', 'skills': 'L', 'Type': 'Privilege escalation'}\n",
       "Unknown\n",
-      "[18, 'unknown17', 'Lskills', 'Privilege escalation']\n",
-      "{'tool': 'Unknown', 'skills': 'L', 'Type': 'CQCM'}\n",
       "Unknown\n",
-      "[9, 'unknown19', 'Lskills', 'CQCM']\n"
+      "Unknown\n"
      ]
     }
    ],
@@ -314,7 +291,7 @@
     "\n",
     "# The tools layer:\n",
     "cpd_Aimpacket = TabularCPD('Aimpacket', 2, [[0.5], [0.5]])\n",
-    "cpd_Aimpacketplus = TabularCPD('AimpacketP', 2, [[0], [1]])\n",
+    "cpd_Aimpacketplus = TabularCPD('AimpacketP', 2, [[MAX], [1-MAX]])\n",
     "BAG.add_edge('Aimpacket', 'impacketP')\n",
     "BAG.add_edge('Aimpacket', 'impacket')\n",
     "BAG.add_edge('AimpacketP', 'impacketP')\n",
@@ -341,7 +318,6 @@
     "        node = node[1]\n",
     "        if node['CVE'] != \"null\":\n",
     "            row = kts_dict[node['CVE']]\n",
-    "            print(row)\n",
     "            if 'impacket' in row['tool'] and row['tool'] != 'impacket':\n",
     "                name = 'impacket' + str(id)\n",
     "                BAG.add_edge(name, id)\n",
@@ -357,7 +333,6 @@
     "            BAG.add_edge(row['skills'] + 'skills', id)\n",
     "            BAG.add_edge(row['Type'], id)\n",
     "            parents = BAG.get_parents(id)\n",
-    "            print(parents)\n",
     "            BAG.add_cpds(TabularCPD(id, 2, cpt_l4.T, parents, evidence_card=2*np.ones(len(parents))))\n",
     "\n",
     "# We add all the necessary CPDs to the BAG\n",
@@ -368,100 +343,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 41 nodes and 63 edges\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "4\n",
-      "5\n",
-      "5\n",
-      "6\n",
-      "6\n",
-      "7\n",
-      "7\n",
-      "8\n",
-      "8\n",
-      "9\n",
-      "9\n",
-      "10\n",
-      "10\n",
-      "11\n",
-      "11\n",
-      "12\n",
-      "12\n",
-      "13\n",
-      "13\n",
-      "14\n",
-      "14\n",
-      "15\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "17\n",
-      "18\n",
-      "18\n",
-      "19\n",
-      "19\n",
-      "BayesianNetwork with 19 nodes and 22 edges\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "4\n",
-      "5\n",
-      "5\n",
-      "6\n",
-      "6\n",
-      "7\n",
-      "7\n",
-      "8\n",
-      "8\n",
-      "9\n",
-      "9\n",
-      "10\n",
-      "10\n",
-      "11\n",
-      "11\n",
-      "12\n",
-      "12\n",
-      "13\n",
-      "13\n",
-      "14\n",
-      "14\n",
-      "15\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "17\n",
-      "18\n",
-      "18\n",
-      "19\n",
-      "19\n",
-      "/homes/nmh24/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
+      "BayesianNetwork with 39 nodes and 57 edges\n",
+      "BayesianNetwork with 19 nodes and 20 edges\n"
      ]
     }
    ],
    "source": [
     "evidence = {19 : 1}\n",
     "with open(output_file, 'w') as f:\n",
-    "    f.write(to_dot(BAG, nodes, evidence))\n",
+    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
-    "    f.write(to_dot(BAG_ref, nodes, evidence))\n",
-    "print(output_file)"
+    "    f.write(to_dot(BAG_ref, nodes, evidence))"
    ]
   },
   {
@@ -475,53 +374,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+-------+-----+---------------------+\n",
-      "| 16    | 16(0) | ... | 16(1)               |\n",
-      "+-------+-------+-----+---------------------+\n",
-      "| 17    | 17(0) | ... | 17(1)               |\n",
-      "+-------+-------+-----+---------------------+\n",
-      "| 15(0) | 1.0   | ... | 0.03999999999999998 |\n",
-      "+-------+-------+-----+---------------------+\n",
-      "| 15(1) | 0.0   | ... | 0.96                |\n",
-      "+-------+-------+-----+---------------------+\n",
-      "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+      "+--------------+------------------+\n",
+      "| impacketP    |   phi(impacketP) |\n",
+      "+==============+==================+\n",
+      "| impacketP(0) |           0.5495 |\n",
+      "+--------------+------------------+\n",
+      "| impacketP(1) |           0.4505 |\n",
+      "+--------------+------------------+\n"
      ]
     }
    ],
    "source": [
-    "print(BAG.get_cpds(15))\n",
-    "print(nodes.keys())\n",
-    "nnn = list(nodes.keys())\n",
-    "print(nnn)\n",
-    "tab = BeliefPropagation(BAG).query(nnn)"
+    "tab = BeliefPropagation(BAG).query(['impacketP'], evidence=evidence)\n",
+    "print(tab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
-      "[1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
-      "+------+----------+\n",
-      "| 3    |   phi(3) |\n",
-      "+======+==========+\n",
-      "| 3(0) |   0.8718 |\n",
-      "+------+----------+\n",
-      "| 3(1) |   0.1282 |\n",
-      "+------+----------+\n"
+      "[1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[72], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# print(tab)\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(nnn)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mnnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(nnn)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(tab\u001b[38;5;241m.\u001b[39mmarginalize(nnn, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
      ]
     }
    ],
@@ -535,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -550,10 +445,10 @@
      "evalue": "BayesianNetwork.add_cpds() got an unexpected keyword argument 'A'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[118], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m BayesianModel([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m), (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Ajoutez vos probabilités conditionnelles\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_cpds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mB\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mC\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Obtenez les probabilités marginales de A, B, C en une seule requête\u001b[39;00m\n\u001b[1;32m     16\u001b[0m inference \u001b[38;5;241m=\u001b[39m VariableElimination(model)\n",
-      "\u001b[0;31mTypeError\u001b[0m: BayesianNetwork.add_cpds() got an unexpected keyword argument 'A'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m BayesianModel([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m), (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Ajoutez vos probabilités conditionnelles\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_cpds\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mB\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mC\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Obtenez les probabilités marginales de A, B, C en une seule requête\u001b[39;00m\n\u001b[0;32m     16\u001b[0m inference \u001b[38;5;241m=\u001b[39m VariableElimination(model)\n",
+      "\u001b[1;31mTypeError\u001b[0m: BayesianNetwork.add_cpds() got an unexpected keyword argument 'A'"
      ]
     }
    ],
@@ -783,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
